tests/baselines/reference/importClause_default.errors.txt
/b.ts(2,5): error TS2693: 'A' only refers to a type, but is being used as a value here.


==== /a.ts (0 errors) ====
    export default class A { a!: string }
    
==== /b.ts (1 errors) ====
    import type A from './a';
    new A();
        ~
!!! error TS2693: 'A' only refers to a type, but is being used as a value here.
    let a: A = { a: '' };
    